--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<meta http-equiv="refresh" content="0;url=/blocking_win/index.html ">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="refresh" content="0;url=/blocking_win/index.html ">
+</head>
+
+<body>
+
+</body>
+
+</html>
