--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0;url=/blocking_win/index.html ">
+  <meta charset="UTF-8" />
+  <link rel="icon" href="favicon.ico" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blocking</title>
+  <script type="module" crossorigin src="/assets/index.2a59a2df.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.e7b4ecd9.js">
+  <link rel="stylesheet" href="./assets/index.d82fd5f9.css">
 </head>
 
 <body>
+  <div id="app"></div>
 
 </body>
 
