--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/blocking_win/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blocking</title>
-    <script type="module" crossorigin src="/assets/index.2a59a2df.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.e7b4ecd9.js">
-    <link rel="stylesheet" href="/assets/index.d82fd5f9.css">
+    <script type="module" crossorigin src="/blocking_win/assets/index.e3a5d605.js"></script>
+    <link rel="modulepreload" href="/blocking_win/assets/vendor.e7b4ecd9.js">
+    <link rel="stylesheet" href="/blocking_win/assets/index.d82fd5f9.css">
   </head>
   <body>
     <div id="app"></div>
